# dacha

./: .gitignore  .pre-commit-config.yaml  Makefile
ansible/: ansible.cfg  hosts  smart_house.yaml
ansible/roles/smart_house/defaults/: main.yaml
ansible/roles/smart_house/files/ble2mqtt/: config.yml
ansible/roles/smart_house/files/mqtt2prometheus/: config.availability.yaml  config.ble2mqtt.yaml  config.zigbee2mqtt.yaml
ansible/roles/smart_house/files/prometheus/: prometheus.yml
ansible/roles/smart_house/files/zigbee2mqtt/: configuration.yaml
ansible/roles/smart_house/handlers/: main.yaml
ansible/roles/smart_house/tasks/: main.yaml
ansible/roles/smart_house/templates/: docker-compose.yaml.in
apps/ble2mqtt/: Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/ble2mqtt/ble2mqtt/: ble2mqtt.py  settings.py
apps/ble2mqtt/ble2mqtt/structs/: ATC_MiThermometer.py
